[gd_scene load_steps=11 format=3 uid="uid://byr8m0qim75t7"]

[ext_resource type="Script" uid="uid://b7kgawy2w3pq1" path="res://scripts/AudioController.gd" id="1_0futw"]
[ext_resource type="AudioStream" uid="uid://b8tkbei5q5jjw" path="res://audio/sfx/bangLarge.wav" id="2_m3wms"]
[ext_resource type="AudioStream" uid="uid://clcil6a0pki0x" path="res://audio/sfx/bangMedium.wav" id="3_2686a"]
[ext_resource type="AudioStream" uid="uid://bk3cvjn8knbdt" path="res://audio/sfx/bangSmall.wav" id="4_xie1u"]
[ext_resource type="AudioStream" uid="uid://b8gyoekcurfp" path="res://audio/sfx/fire.wav" id="5_pbl1h"]
[ext_resource type="AudioStream" uid="uid://bee6hbcjkc4xm" path="res://audio/sfx/thrust.wav" id="6_e2wob"]
[ext_resource type="AudioStream" uid="uid://pq6ngfih8f2" path="res://audio/sfx/saucerBig.wav" id="7_anrqm"]
[ext_resource type="AudioStream" uid="uid://dujjeq8gwjwpe" path="res://audio/sfx/saucerSmall.wav" id="8_r2ijx"]
[ext_resource type="AudioStream" uid="uid://do0vsscrunh1d" path="res://audio/sfx/ufo_die.wav" id="9_2e0id"]
[ext_resource type="AudioStream" uid="uid://bjuvq0kbwo2yj" path="res://audio/sfx/player_die.wav" id="10_lp5i4"]

[node name="AudioController" type="Node2D"]
script = ExtResource("1_0futw")

[node name="Crash1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_m3wms")
volume_db = -12.0

[node name="Crash2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_2686a")
volume_db = -12.0

[node name="Crash3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_xie1u")
volume_db = -12.0

[node name="Shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_pbl1h")
volume_db = -12.0

[node name="Throtle" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_e2wob")
volume_db = -28.108

[node name="BigUfo" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_anrqm")
volume_db = -25.0

[node name="MiniUfo" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_r2ijx")
volume_db = -25.0

[node name="DieUfo" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_2e0id")
volume_db = -26.234

[node name="PlayerDie" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_lp5i4")
volume_db = -17.802
